# robot

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.61554fa.22  CMakeLists.txt.user.a6e0c27.4.9-pre1  README.md  main.cpp  qml.qrc  qtquickcontrols2.conf
application/: app.h  brain.cpp  brain.h  decimal_infer.cpp  decimal_infer.h  eye.cpp  hand.cpp  hearthStone.cpp  testserver.cpp  testserver.h
cmake/: STMMANConfig.cmake
dnn_model/: Count_34-LeNet-model  Count_7-LeNet-model  Gem-LeNet-model  LeNet-model  Split-LeNet-model
framework/: ImageBoard.h  client.h  command.h  document.h  imageModel.h  imageProvider.h  pyfuncs.h  rxmanager.h  ssdp.h  taskSequence.h  threadpool.h  uimanager.h  util.h
imageboardplugins/: paintShape.h  selectShape.h  transformImage.h
imageboardplugins/expand/: selectShapeWithHandle.h
qml/: main.qml
qml/Components/: AnchorRef.qml  AttachViewBoard.qml  CustomButton0.qml  CustomCheckBox0.qml  CustomEdit0.qml  GridLabelBoard.qml  LabelBoard.qml  LabelComboEdit.qml  LabelEdit.qml  MinSizeEdit.qml  ProgressWindow.qml  WindowControlButtons.qml
qml/Default_Application/: Control.qml  Log.qml
qml/Pages/: Control.qml
resource/config_/: config_.json
resource/config_/hearthStone/: cardPlace.json  enemyCountFeature.json  enemyHeroPos.json  enemyTurn.json  firstSelect.json  firstSelectSet.json  gameOver.json  gemPos.json  giveup.json  heroPos.json  myCountFeature.json  myTurn.json  myTurn2.json  n_select3_0.json  n_select3_1.json  n_select3_2.json  n_select4_0.json  n_select4_1.json  n_select4_2.json  n_select4_3.json  normalSelect.json  normalSelect30.json  normalSelect34.json  normalSelect40.json  ready.json  select34.json  select3_0.json  select3_1.json  select3_2.json  select4_0.json  select4_1.json  select4_2.json  select4_3.json  select_split.json
resource/config_/hearthStone/attendant_pos/: 0_0.json  1_0.json  1_1.json  2_0.json  2_1.json  2_2.json  3_0.json  3_1.json  3_2.json  3_3.json  4_0.json  4_1.json  4_3.json  4_4.json  5_0.json  5_1.json  5_2.json  5_3.json  5_4.json  5_5.json  6_0.json  6_1.json  6_2.json  6_3.json  6_4.json  6_5.json  6_6.json
resource/config_/hearthStone/cards_pos/: 0_0.json  1_0.json  1_1.json  2_0.json  2_1.json  2_2.json  3_0.json  3_1.json  3_2.json  3_3.json  4_0.json  4_1.json  4_2.json  4_3.json  4_4.json  5_0.json  5_1.json  5_2.json  5_3.json  5_4.json  5_5.json  6_0.json  6_1.json  6_2.json  6_3.json  6_4.json  6_5.json  6_6.json  7_0.json  7_1.json  7_2.json  7_3.json  7_4.json  7_5.json  7_6.json  7_7.json  8_0.json  8_1.json  8_2.json  8_3.json  (+15 more)
